# src/modules/Livros/UseCase/alterLivros/AlterLivrosController.ts
@@ -9,12 +9,24 @@ export class AlterLivrosController{
 
   async handle(request: Request, response: Response): Promise<Response>{
 
-    const { id } = request.headers
-    const { data } = request.body
-  
+    const { id }  = request.params
+    const 
+    { 
+      titulo,
+      foto,
+      editora,
+      autores
+    } = request.body
+
     const alterLivrosUseCase = container.resolve(AlterLivrosUseCase)
 
-    const alter = await alterLivrosUseCase.execute(data, id)
+    const alter = await alterLivrosUseCase.execute({
+      id,
+      titulo,
+      foto,
+      editora,
+      autores
+    })
 
     return response.status(200).json(alter)
   }
